--- a/Signal/translations/fi.lproj/Localizable.strings
+++ b/Signal/translations/fi.lproj/Localizable.strings
@@ -1610,7 +1610,7 @@
 "COUNTRYCODE_SELECT_TITLE" = "Valitse maatunnus";
 
 /* Label for button that enables you to make a new call link. */
-"CREATE_CALL_LINK_LABEL" = "Create a Call Link";
+"CREATE_CALL_LINK_LABEL" = "Luo puhelulinkki";
 
 /* Body text for an interactive in-app prompt to set up a Signal username. */
 "CREATE_USERNAME_MEGAPHONE_BODY" = "Esittelyssä puhelinnumeroiden yksityisyys, valinnaiset käyttäjänimet ja linkit.";
