--- a/Signal/translations/ca.lproj/Localizable.strings
+++ b/Signal/translations/ca.lproj/Localizable.strings
@@ -1610,7 +1610,7 @@
 "COUNTRYCODE_SELECT_TITLE" = "Trieu un codi internacional";
 
 /* Label for button that enables you to make a new call link. */
-"CREATE_CALL_LINK_LABEL" = "Create a Call Link";
+"CREATE_CALL_LINK_LABEL" = "Crear un enllaç de trucada";
 
 /* Body text for an interactive in-app prompt to set up a Signal username. */
 "CREATE_USERNAME_MEGAPHONE_BODY" = "Presentem la privacitat del número de telèfon, els àlies opcionals i els enllaços.";
