--- a/Signal/translations/sk.lproj/Localizable.strings
+++ b/Signal/translations/sk.lproj/Localizable.strings
@@ -1610,7 +1610,7 @@
 "COUNTRYCODE_SELECT_TITLE" = "Vybrať kód krajiny";
 
 /* Label for button that enables you to make a new call link. */
-"CREATE_CALL_LINK_LABEL" = "Create a Call Link";
+"CREATE_CALL_LINK_LABEL" = "Vytvoriť odkaz na hovor";
 
 /* Body text for an interactive in-app prompt to set up a Signal username. */
 "CREATE_USERNAME_MEGAPHONE_BODY" = "Predstavujeme funkciu utajenia telefónneho čísla, voliteľné používateľské mená a odkazy.";
