--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,2 +1,1 @@
-• Nu kan du vende kameraet, selv når du er alene i et gruppeopkald. Gør dig klar til at give dem et billede på forreste række ved at skifte til det bagerste kamera, eller skift tilbage til det forreste kamera, så du er klar til at tale tilbage. 
-• Vi rettede en fejl, der forhindrede nogle brugere i at deltage i en ny gruppe eller deltage i en eksisterende gruppe igen, og vi rettede også en fejl, der gjorde det sværere at rulle mellem visninger under gruppeopkald, mens en hånd blev løftet. Dette er uden tvivl vores foretrukne fejlrettelser i denne udgivelse. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
