--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,2 +1,1 @@
-• Du kannst die Kamera jetzt auch drehen, wenn du allein in einem Gruppenanruf bist. Gewähre den Anderen einen Rundumblick, indem du auf die hintere Kamera umschaltest, oder schalte auf die vordere Kamera um, damit sie dich sehen. 
-• Wir haben einen Fehler behoben, der einige Nutzer*innen daran hinderte, einer neuen Gruppe beizutreten oder einer bestehenden Gruppe erneut beizutreten. Außerdem haben wir einen Fehler behoben, der es bei Gruppenanrufen, wenn eine Hand gehoben wurde, erschwerte, zwischen den Ansichten zu scrollen.  
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
