--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,2 +1,1 @@
-• Da ora puoi passare dalla camera frontale alla posteriore (e viceversa) anche quando sei l'unica persona in una chiamata di gruppo. Così non ti coglieranno più di sorpresa quando entrano di soppiatto nella chiamata! 
-• Abbiamo risolto un bug che a volte impediva di unirsi a un nuovo gruppo (o riunirsi a un gruppo già esistente) e un altro che rendeva difficile cambiare visualizzazione durante le chiamate di gruppo quando una persona alzava la mano. Come si suol dire: abbiamo preso due bug con un aggiornamento! 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
