--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,2 +1,1 @@
-• Kini anda boleh menukar antara kamera depan dan belakang dalam panggilan kumpulan walaupun orang lain belum menyertai panggilan. 
-• Kami membaiki pepijat yang menghalang sesetengah pengguna daripada menyertai kumpulan baru atau menyertai semula kumpulan sedia ada. Kami juga membaiki pepijat yang menyebabkan kesukaran menatal paparan skrin pada masa yang sama panggilan kumpulan berlangsung dan tangan diangkat. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
