--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,1 @@
-• Теперь вы можете переключать камеру, даже если, кроме вас, на групповом звонке ещё никого нет. Предоставьте собеседникам возможность увидеть происходящее из первого ряда, включив заднюю камеру, или переключитесь обратно на переднюю, когда придёт ваша очередь говорить. 
-• Мы исправили ошибку, из-за которой некоторые пользователи не могли присоединиться к новой группе или повторно присоединиться к старой, а также исправили ошибку, из-за которой во время групповых звонков было сложно переключаться между режимами отображения при поднятой руке. Это, несомненно, наши любимые исправления ошибок в этом релизе. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
