--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,2 +1,1 @@
-• Тепер камеру можна перемикати, навіть якщо в груповому виклику більше нікого нема. Готуйтеся до розмови вчасно, щоб не перемикатися на передню камеру заднім числом. 
-• Ми виправили помилку, яка заважала деяким користувачам приєднатися до нової групи або повторно приєднатися до старої. Крім того, ми позбавилися помилки, через яку було важко змінювати режими перегляду в групових викликах, якщо хтось підіймав руку. Сподіваємося, ці виправлення зіграють вам на руку. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
