--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,2 +1,1 @@
-• Ara, durant una trucada grupal, podràs canviar de càmera encara que els altres participants no s'hi hagin unit. 
-• Hem corregit un error que impedia a alguns usuaris unir-se a un grup nou o tornar a unir-se a un grup existent. També hem corregit un error que feia més difícil desplaçar-se entre vistes de càmera durant les trucades de grup mentre hi havia una mà aixecada. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
