--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,2 +1,1 @@
-• Τώρα μπορείς να εναλλάσσεις μεταξύ της μπροστινής και της πίσω κάμερας σε μια ομαδική κλήση, ακόμη και αν δεν έχουν ακόμη μπει άλλα άτομα στην κλήση. 
-• Διορθώσαμε ένα σφάλμα που εμπόδιζε ορισμένους χρήστες να μπουν σε μια νέα ομάδα ή να ξαναμπούν σε μια υπάρχουσα ομάδα, και διορθώσαμε επίσης ένα σφάλμα που δυσκόλευε την κύλιση μεταξύ των προβολών κατά τη διάρκεια ομαδικών κλήσεων, ενώ υπήρχε σηκωμένο χέρι. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
