--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,2 +1,1 @@
-• Nyt voit vaihtaa etu- ja takakameran välillä ryhmäpuhelussa, vaikka puhelussa ei olisi vielä muita. 
-• Korjasimme virheen, joka esti joitakin käyttäjiä liittymästä uuteen ryhmään tai liittymästä uudelleen olemassa olevaan ryhmään, ja korjasimme myös virheen, joka vaikeutti näkymien selaamista ryhmäpuheluiden aikana kättä nostettaessa. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
