--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,2 +1,1 @@
-• Vous pouvez maintenant passer de la caméra avant à la caméra arrière (et vice versa) même lorsque vous êtes seul dans un appel de groupe. Activez la caméra arrière pour que vos interlocuteurs soient aux premières loges ou basculez vers la caméra avant pour passer un moment plus personnel avec eux. 
-• Et encore deux bugs de moins ! Certains utilisateurs ne pouvaient pas rejoindre un nouveau groupe ou réintégrer un groupe existant. Il était aussi difficile de passer d'un écran à l'autre lorsqu'une personne avait levé la main dans un appel de groupe. Avec cette nouvelle version de Signal, plus besoin d'être VIP pour rejoindre un groupe, ni détective pour ne rien manquer de la conversation ! 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
