--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,2 +1,1 @@
-• עכשיו אפשר להחליף בין מצלמה קדמית ואחורית בשיחה קבוצתית אפילו אם אנשים אחרים עוד לא הצטרפו לשיחה. 
-• תיקנו באג שמנע מחלק מהמשתמשים להצטרף לקבוצה חדשה או להצטרף מחדש לקבוצה קיימת, ותיקנו גם באג שהקשה על הגלילה בין תצוגות במהלך שיחות קבוצתיות בזמן שהיד מורמת. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
