--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,2 +1,1 @@
-• अब आप तब भी कैमरा फ़्लिप कर सकते हैं, जब आप किसी ग्रुप कॉल में अकेले हों। बैक कैमरा पर स्विच करके उन्हें पहली लाइन वाला व्यू दिखाने के लिए तैयार हो जाएँ या फिर से फ़्रंट कैमरे पर स्विच करें, ताकि आप वापस बात करने के लिए तैयार हों। 
-• हमने उस गड़बड़ी को ठीक कर दिया है, जो कुछ यूज़र्स को नए ग्रुप में शामिल होने या किसी मौजूदा ग्रुप में फिर से शामिल होने से रोकती थी, और हमने उस गड़बड़ी को भी ठीक किया है जिसकी वजह से ग्रुप कॉल के दौरान हाथ खड़ा करने पर व्यूज़ के बीच स्क्रोल करने में दिक्कत होती थी। इस रिलीज़ में, इन गड़बड़ियों को ठीक करना हमारा सबसे पसंदीदा काम रहा। 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
