--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,2 +1,1 @@
-• Sada se možete prebacivati između prednje i stražnje kamere u grupnom pozivu čak i ako se drugi sudionici još nisu pridružili. 
-• Ispravili smo programsku pogrešku koja je sprječavala određene korisnike da se pridruže novoj grupi ili da se ponovno pridruže postojećoj. Također smo ispravili pogrešku koja je otežavala prebacivanje prikaza tijekom grupnih poziva kada je podignuta ruka. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
