--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,1 @@
-• Mostantól csoportos hívásban válthatsz az elülső és a hátsó kamera között, még akkor is, ha mások még nem csatlakoztak a híváshoz. 
-• Kijavítottunk egy hibát, amely megakadályozta, hogy egyes felhasználók csatlakozzanak egy új csoporthoz, vagy újból csatlakozzanak egy meglévő csoporthoz, valamint kijavítottunk egy olyan hibát is, amely megnehezítette a nézetek közötti görgetést csoportos hívások közben, miközben valaki felemelte a kezét. Ezek a kedvenc hibajavításaink ebben a kiadásban. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
