--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,2 +1,1 @@
-• Je kunt nu zelfs als je de enige in een groepsgesprek bent van camera wisselen. Maak je klaar om ze een blik op de eerste rij te geven door te schakelen naar de achtercamera, of schakel terug naar de selfiecamera zodat je klaar bent om terug te praten. 
-• We hebben een fout opgelost die verhinderde dat sommige gebruikers lid konden worden van een nieuwe groep of opnieuw lid konden worden van een bestaande groep. We hebben ook een fout opgelost die het moeilijker maakte om de weergave te wijzigen tijdens groepsoproepen als iemand een hand had opgestoken. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
