--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,2 +1,1 @@
-• Acum poți întoarce camera chiar și atunci când ești singur într-un apel de grup. Pregătește-te să le oferi o perspectivă de primul rând, trecând la camera din spate sau mută înapoi la camera frontală, astfel încât să fii gata să răspunzi. 
-• Am remediat o eroare care împiedica unii utilizatori să se alăture unui grup nou sau să se alăture unui grup existent și, de asemenea, am remediat o eroare care îngreuna derularea între vizualizări în timpul apelurilor de grup în timp ce o mână era ridicată. Acestea sunt, fără îndoială, remedierile noastre preferate din această versiune. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
