--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,1 @@
-• Teraz môžete v skupinovom hovore prepínať medzi prednou a zadnou kamerou, a to aj vtedy, keď sa k hovoru ešte nepripojili iní ľudia. 
-• Opravili sme chybu, ktorá bránila niektorým používateľom pripojiť sa k novej skupine alebo sa znovu pripojiť k existujúcej skupine a tiež chybu, ktorá sťažovala posúvanie medzi zobrazeniami počas skupinových hovorov, keď bola zdvihnutá ruka. 
+• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
